Long usernames overflow fix

--- a/src/client/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/client/components/HamburgerMenu/HamburgerMenu.module.css
@@ -48,6 +48,11 @@
   margin-right: 1em;
 }
 
+.menuItem > span {
+  overflow: hidden;
+  text-overflow:ellipsis;
+}
+
 .active {
   text-decoration: underline;
 }
